--- a/Ecommerce.html
+++ b/Ecommerce.html
@@ -12,7 +12,7 @@
         width:1500px;
         color:white;
         margin:0px 8px;
-        background-image:url('./images/main-banner.jpg');
+        background-image:url('../images/main-banner.jpg');
         align-content: center;
         }
         .latest-products-btn{
