--- a/cart.html
+++ b/cart.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
-    <script src="https://kit.fontawesome.com/1e086755ed.js"crossorigin="anonymous"></script>
-    <link href="Ecommerce.css"rel='stylesheet'>
+    <script src="https://kit.fontawesome.com/1e086755ed.js" crossorigin="anonymous"></script>
+    <link href="Ecommerce.css" rel="stylesheet">
+    <script src="cart.js"></script>
 </head>
 <body>
 <div>
@@ -22,27 +23,83 @@
         <div class="btn-icon-header">
             <span class="icon-header">
                 <i class="fa-solid fa-right-to-bracket"></i>
-                <a href='login.html'class="btn-header">Login</a>
+                <a href='login.html' class="btn-header">Login</a>
             </span>
             <span class="icon-header">
                 <i class="fas fa-user-plus"></i>
-                <a href='Register.html'class="btn-header">Register</a>
+                <a href='Register.html' class="btn-header">Register</a>
             </span>            
             <span class="icon-header">
                 <i class="fa-solid fa-cart-shopping"></i>
-                <a href="cart.html"><button onclick='cart()'class="btn-header">Cart (<span id="cart-value">0</span>)</button></a> 
+                <a href="cart.html"><button class="btn-header">Cart (<span id="cart-value">0</span>)</button></a> 
             </span>           
         </div> 
     </header>   
     <div id="cart">
-        <h1 align="center"style='font-size:2.5em'>Cart</h1>
-        <hr width="80%">
-        <div align="center" style="background-color:lightgray;height:300px;width:80%;margin:30px 150px;align-content:center;">
-        <p style="font-size:2.5em;margin-top:-20px;margin-bottom:30px;">You Cart is Empty</p> 
-        <a href="home-page.html"><button id="cart-continue-btn"style='padding:8px 15px;border-radius:5px'><strong>&#8592</strong> Continue Shopping</button></a>  
+        <hr width="80%"><br>
+        <div align="center" style="background-color:lightgray; height:350px; width:80%; margin:30px 150px; align-content:center;">
+            <p style="font-size:2.5em; margin-top:-20px; margin-bottom:30px;">Your Cart is Empty</p> 
+            <a href="home-page.html"><button id="cart-continue-btn" style='padding:8px 15px; border-radius:5px'><i class="fa-solid fa-left-long"></i> Continue Shopping</button></a>  
         </div>
-        <p align="center"style='font-size:1.3em'>Made with <span style='color:red;'>&#x2665</span> By <u>Tarun Mudhiraj</u></p>
+        <p align="center" style='font-size:1.3em'>Made with <span style='color:red;'>&#x2665</span> By <u>Tarun Mudhiraj</u></p>
     </div>
+    <div class="cart-main">
+        <div id="cart-items"></div>
+        <div id="checkout"></div>
+    </div>
+<!-- <script>
+         // Function to load cart items and update display
+        function loadCart() {
+            const cartItemsContainer = document.getElementById('cart-items');
+            const checkout = document.getElementById('checkout');
+            const emptyCartDiv = document.getElementById('cart');
+            const cartValue = document.getElementById('cart-value');
+            const cart = JSON.parse(localStorage.getItem('cart')) || [];
+            cartItemsContainer.innerHTML = "";  // Clear existing cart items
+            let totalPrice = 0;
+            if (cart.length === 0) {
+                emptyCartDiv.style.display = 'block';
+                checkout.style.display = 'none';
+            } else {
+                emptyCartDiv.style.display = 'none';
+                checkout.style.display = 'block';
+                cart.forEach((item) => {
+                    const itemTotal = item.price * item.quantity;
+                    totalPrice += itemTotal;
+                    const cartItem = document.createElement('div');
+                    cartItem.innerHTML = `
+                        <img src="${item.image}" alt="${item.title}" width="50">
+                        <p>${item.title}</p>
+                        <div>
+                            <button onclick="changeQuantity(${item.id}, -1)">-</button>
+                            <span>${item.quantity}</span>
+                            <button onclick="changeQuantity(${item.id}, 1)">+</button>
+                            <p>${item.quantity} x $${item.price}</p>
+                        </div>`;
+                    cartItemsContainer.appendChild(cartItem);
+                });
+                totalPrice += 30;
+                checkout.innerHTML = `
+                    <p>Products (<span>${cart.reduce((acc, item) => acc + item.quantity, 0)}</span>) $${totalPrice.toFixed(2)}</p>
+                    <p>Shipping <span>$30</span></p>
+                    <p>Total Price: $<span id="total-price">${totalPrice.toFixed(2)}</span></p>`;
+            }
+            cartValue.textContent = cart.length;
+        }
+        function changeQuantity(id, change) {
+            let cart = JSON.parse(localStorage.getItem('cart')) || [];
+            const itemIndex = cart.findIndex(item => item.id === id);
+            if (itemIndex >= 0) {
+                cart[itemIndex].quantity += change;
+                if (cart[itemIndex].quantity <= 0) {
+                    cart.splice(itemIndex, 1);
+                }
+                localStorage.setItem('cart', JSON.stringify(cart));
+                loadCart();
+            }
+        }
+        document.addEventListener('DOMContentLoaded', loadCart);
+        </script> -->
 </div>
 </body>
 </html>
