--- a/Product-page.html
+++ b/Product-page.html
@@ -80,5 +80,7 @@
     <button onclick="filter('electronics')"class="latest-products-btn">Electronics</button>
 </div>
 <div id="card-items"></div>
+<br>
+<p align="center"style='font-size:1.3em'>Made with <span style='color:red;'>&#x2665</span> By <u>Tarun Mudhiraj</u></p>
 </body>
 </html>
