--- a/home-page.html
+++ b/home-page.html
@@ -13,7 +13,7 @@
             width:1500px;
             color:white;
             margin:0px 8px;
-            background-image:url('../images/main-banner.jpg');
+            background-image:url('./main-banner.jpg');
             align-content: center;
         }
         .latest-products-btn{
@@ -86,5 +86,7 @@
     <button onclick="filter('electronics')"class="latest-products-btn">Electronics</button>
 </div>
 <div id="card-items"></div>
+<br>
+<p align="center"style='font-size:1.3em'>Made with <span style='color:red;'>&#x2665</span> By <u>Tarun Mudhiraj</u></p>
 </body>
 </html>
