--- a/cart.html
+++ b/cart.html
@@ -1,105 +1,111 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>  
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
     <script src="https://kit.fontawesome.com/1e086755ed.js" crossorigin="anonymous"></script>
-    <link href="Ecommerce.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="cart.js"></script>
+    <!-- <link href="Ecommerce.css"rel='stylesheet'> -->
+<!-- <style>
+body{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    overflow-x:hidden;
+}
+.cart-main{
+    display:grid;
+    grid-template-columns:auto auto;
+    margin:70px 70px 70px 60px;
+}
+#cart-flex{
+    display:grid;
+    grid-template-columns:auto auto auto;
+    justify-items: center;
+    height:150px;
+}
+#cart-items{
+    border:1px solid black;
+    overflow-y:scroll;
+    margin-left:50px;
+    height:600px;
+    width:100%;
+}
+#checkout{
+    border:1px solid black;
+    transform:translateX(100px);
+    padding:10px 40px;
+    height:250px;
+    width:350px;
+}
+#checkout button{
+    background-color: black;
+    color: white;
+    padding:8px 10px;
+    width:350px
+}
+#card-items{
+    display:grid;
+    grid-template-columns:auto auto auto;
+    margin:50px 20px 0px 20px;
+}
+    </style> -->
 </head>
 <body>
 <div>
-    <header>
-        <div>
-            <h2>Ecommerce</h2>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <h2 class="mb-0">Ecommerce</h2>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <!-- Centered Links -->
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item"><a class="nav-link text-dark" href="home-page.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="Product-page.html">Products</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="About.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="Contact-page.html">Contact</a></li>
+                </ul>
+                <div class="d-flex gap-3">
+                    <a href="login.html" class="btn btn-outline-dark btn-sm">
+                        <i class="fa-solid fa-right-to-bracket me-2"></i> Login
+                    </a>
+                    <a href="Register.html" class="btn btn-outline-dark btn-sm">
+                        <i class="fas fa-user-plus me-2"></i> Register
+                    </a>
+                    <a href="cart.html" class="btn btn-outline-dark btn-sm">
+                        <i class="fa-solid fa-cart-shopping me-2"></i> Cart (<span id="cart-value">0</span>)
+                    </a>
+                </div>
+            </div>
         </div>
-        <div class='nav-links'>
-            <a href="home-page.html">Home</a>
-            <a href="Product-page.html">Products</a>
-            <a href="About.html">About</a>
-            <a href="Contact-page.html">Contact</a>
+    </nav> 
+    <div id="cart" class="container my-5">
+        <hr class="w-75 mx-auto">
+        <div class="d-flex flex-column justify-content-center align-items-center bg-light p-4 rounded shadow" style="height: 350px;">
+            <p class="fs-2 mb-4 text-center">Your Cart is Empty</p>
+            <a href="home-page.html" class="text-decoration-none">
+                <button id="cart-continue-btn" class="btn btn-dark px-4 py-2">
+                    <i class="fa-solid fa-left-long me-2"></i> Continue Shopping
+                </button>
+            </a>
         </div>
-        <div class="btn-icon-header">
-            <span class="icon-header">
-                <i class="fa-solid fa-right-to-bracket"></i>
-                <a href='login.html' class="btn-header">Login</a>
-            </span>
-            <span class="icon-header">
-                <i class="fas fa-user-plus"></i>
-                <a href='Register.html' class="btn-header">Register</a>
-            </span>            
-            <span class="icon-header">
-                <i class="fa-solid fa-cart-shopping"></i>
-                <a href="cart.html"><button class="btn-header">Cart (<span id="cart-value">0</span>)</button></a> 
-            </span>           
-        </div> 
-    </header>   
-    <div id="cart">
-        <hr width="80%"><br>
-        <div align="center" style="background-color:lightgray; height:350px; width:80%; margin:30px 150px; align-content:center;">
-            <p style="font-size:2.5em; margin-top:-20px; margin-bottom:30px;">Your Cart is Empty</p> 
-            <a href="home-page.html"><button id="cart-continue-btn" style='padding:8px 15px; border-radius:5px'><i class="fa-solid fa-left-long"></i> Continue Shopping</button></a>  
-        </div>
-        <p align="center" style='font-size:1.3em'>Made with <span style='color:red;'>&#x2665</span> By <u>Tarun Mudhiraj</u></p>
+        <p class="text-center mt-3 fs-5">
+            Made with <span style="color: red;">&#x2665;</span> By <u>Tarun Mudhiraj</u>
+        </p>
     </div>
-    <div class="cart-main">
-        <div id="cart-items"></div>
-        <div id="checkout"></div>
+    <div class="container my-5">
+        <div class="row">
+            <div class="col-md-8" id="cart-items">
+            </div>
+            <div class="col-md-4" id="checkout">
+            </div>
+        </div>
     </div>
-<!-- <script>
-         // Function to load cart items and update display
-        function loadCart() {
-            const cartItemsContainer = document.getElementById('cart-items');
-            const checkout = document.getElementById('checkout');
-            const emptyCartDiv = document.getElementById('cart');
-            const cartValue = document.getElementById('cart-value');
-            const cart = JSON.parse(localStorage.getItem('cart')) || [];
-            cartItemsContainer.innerHTML = "";  // Clear existing cart items
-            let totalPrice = 0;
-            if (cart.length === 0) {
-                emptyCartDiv.style.display = 'block';
-                checkout.style.display = 'none';
-            } else {
-                emptyCartDiv.style.display = 'none';
-                checkout.style.display = 'block';
-                cart.forEach((item) => {
-                    const itemTotal = item.price * item.quantity;
-                    totalPrice += itemTotal;
-                    const cartItem = document.createElement('div');
-                    cartItem.innerHTML = `
-                        <img src="${item.image}" alt="${item.title}" width="50">
-                        <p>${item.title}</p>
-                        <div>
-                            <button onclick="changeQuantity(${item.id}, -1)">-</button>
-                            <span>${item.quantity}</span>
-                            <button onclick="changeQuantity(${item.id}, 1)">+</button>
-                            <p>${item.quantity} x $${item.price}</p>
-                        </div>`;
-                    cartItemsContainer.appendChild(cartItem);
-                });
-                totalPrice += 30;
-                checkout.innerHTML = `
-                    <p>Products (<span>${cart.reduce((acc, item) => acc + item.quantity, 0)}</span>) $${totalPrice.toFixed(2)}</p>
-                    <p>Shipping <span>$30</span></p>
-                    <p>Total Price: $<span id="total-price">${totalPrice.toFixed(2)}</span></p>`;
-            }
-            cartValue.textContent = cart.length;
-        }
-        function changeQuantity(id, change) {
-            let cart = JSON.parse(localStorage.getItem('cart')) || [];
-            const itemIndex = cart.findIndex(item => item.id === id);
-            if (itemIndex >= 0) {
-                cart[itemIndex].quantity += change;
-                if (cart[itemIndex].quantity <= 0) {
-                    cart.splice(itemIndex, 1);
-                }
-                localStorage.setItem('cart', JSON.stringify(cart));
-                loadCart();
-            }
-        }
-        document.addEventListener('DOMContentLoaded', loadCart);
-        </script> -->
 </div>
 </body>
 </html>
