--- a/Contact-page.html
+++ b/Contact-page.html
@@ -3,67 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact-page</title>
-    <script src="https://kit.fontawesome.com/1e086755ed.js"crossorigin="anonymous"></script>
-    <link href="Ecommerce.css"rel='stylesheet'>
+    <title>Contact Us</title>
+    <script src="https://kit.fontawesome.com/1e086755ed.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        div form{
-            transform:translateX(610px);
+        body {
+            background-color: #f8f9fa;
         }
-        [value='Send']{
-            padding:8px 15px;
-            border-radius:5px; 
-            background-color:rgb(48, 46, 46);
-            color:white;
-            border: none;
+        .navbar {
+            padding: 1rem;
         }
-        form input{
-            border-radius:5px;
-            margin-top:10px;
-            margin-bottom:10px;
+        .form-control:focus {
+            border-color:gray;
+            outline: none;
+            box-shadow: none;
         }
     </style>
 </head>
 <body>
-<div>
-    <header>
-        <div>
-
-            <h2>Ecommerce</h2>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <h2 class="mb-0">Ecommerce</h2>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item"><a class="nav-link text-dark" href="home-page.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="Product-page.html">Products</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="About.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="Contact-page.html">Contact</a></li>
+                </ul>
+                <div class="d-flex gap-3">
+                    <a href="login.html" class="btn btn-outline-dark btn-sm">
+                        <i class="fa-solid fa-right-to-bracket me-2"></i> Login
+                    </a>
+                    <a href="Register.html" class="btn btn-outline-dark btn-sm">
+                        <i class="fas fa-user-plus me-2"></i> Register
+                    </a>
+                    <a href="cart.html" class="btn btn-outline-dark btn-sm">
+                        <i class="fa-solid fa-cart-shopping me-2"></i> Cart (<span id="cart-value">0</span>)
+                    </a>
+                </div>
+            </div>
         </div>
-        <div class='nav-links'>
-            <a href="home-page.html">Home</a>
-            <a href="Product-page.html">Products</a>
-            <a href="About.html">About</a>
-            <a href="Contact-page.html">Contact</a>
+    </nav>
+    <div class="container">
+        <h1 class="text-center mb-4">Contact Us</h1>
+        <hr>
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-8 col-lg-6">
+                <form class="p-4 rounded bg-white shadow-sm">
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="name" placeholder="Enter your name">
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                    </div>
+                    <div class="mb-3">
+                        <label for="message" class="form-label">Message</label>
+                        <textarea class="form-control" id="message" rows="5" placeholder="Enter your message"></textarea>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-dark w-100">Send</button>
+                    </div>
+                </form>
+            </div>
         </div>
-        <div class="btn-icon-header">
-            <span class="icon-header">
-                <i class="fa-solid fa-right-to-bracket"></i>
-                <a href='login.html'class="btn-header">Login</a>
-            </span>
-            <span class="icon-header">
-                <i class="fas fa-user-plus"></i>
-                <a href='Register.html'class="btn-header">Register</a>
-            </span>            
-            <span class="icon-header">
-                <i class="fa-solid fa-cart-shopping"></i>
-                <a href="cart.html"><button onclick='cart()'class="btn-header">Cart (<span id="cart-value">0</span>)</button></a> 
-            </span>           
-        </div> 
-    </header>
-    <h1 align="center"style="padding-top:15px;">Contact Us</h1>
-    <hr style="margin:5px">
-    <div style="margin-top:30px;">
-        <form style="font-size:1.3em;">
-            <label>Name</label><br>
-            <input type="text"placeholder='Enter your name'style='height:30px;width:280px;border:2px solid lightgray;'><br>
-            <label>Email</label><br>
-            <input type="email"placeholder='name@example.com'style='height:30px;width:280px;border:2px solid lightgray;'><br>
-            <label>Message</label><br>
-            <textarea style='height:170px;width:280px;border-radius:5px;margin-top:10px;margin-bottom:10px;border:2px solid lightgray'>Enter your Message</textarea><br>
-            <input type="button"value='Send'style='margin-left:110px'>
-        </form>
     </div>
-    <p align="center"style='font-size:1.3em'>Made with <span style='color:red;'>&#x2665</span> By <u>Tarun Mudhiraj</u></p>
-</div>
+    <footer class="bg-light py-4 text-center mt-5">
+        <p class="mb-0">Made with <span style="color:red;">&#x2665;</span> By <u>Tarun Mudhiraj</u></p>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
