--- a/Register.html
+++ b/Register.html
@@ -3,69 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <script src="https://kit.fontawesome.com/1e086755ed.js"crossorigin="anonymous"></script>
-    <link href="Ecommerce.css"rel='stylesheet'>
-<style>
-    div form{
-        transform:translateX(580px);
-    }
-    [value='Register']{
-        padding:8px 15px;
-        border-radius:5px; 
-        background-color:rgb(48, 46, 46);
-        color:white;
-        border: none;
-    }
-    form input{
-        border-radius:5px;
-        margin-top:10px;
-        margin-bottom:10px;
-    }
-</style>
+    <title>Register</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- FontAwesome Icons -->
+    <script src="https://kit.fontawesome.com/1e086755ed.js" crossorigin="anonymous"></script>
+    <style>
+        .text-aqua{
+            color:aqua;
+        }
+        .form-control:focus {
+            border-color: gray;
+            outline: none;
+            box-shadow: none;
+        }
+    </style>
 </head>
 <body id="body">
-<div>
-    <header>
-        <div>
-            <h2>Ecommerce</h2>
-        </div>
-        <div class='nav-links'>
-            <a href="home-page.html">Home</a>
-            <a href="Product-page.html">Products</a>
-            <a href="About.html">About</a>
-            <a href="Contact-page.html">Contact</a>
-        </div>
-        <div class="btn-icon-header">
-            <span class="icon-header">
-                <i class="fa-solid fa-right-to-bracket"></i>
-                <a href='login.html'class="btn-header">Login</a>
-            </span>
-            <span class="icon-header">
-                <i class="fas fa-user-plus"></i>
-                <a href='Register.html'class="btn-header">Register</a>
-            </span>  
-            <span class="icon-header">
-                <i class="fa-solid fa-cart-shopping"></i>
-                <a href="cart.html"><button onclick='cart()'class="btn-header">Cart (<span id="cart-value">0</span>)</button></a> 
-            </span>           
-        </div> 
-    </header>
-    <h1 align="center"style="padding-top:15px;">Register</h1>
-    <hr style="margin:5px">
-    <div style="margin-top:30px;">
-        <form style="font-size:1.3em;">
-            <label>Full Name</label><br>
-            <input type="text"placeholder='Enter Your Name'style='height:30px;width:350px;border:2px solid lightgray;'><br>
-            <label>Email address</label><br>
-            <input type="email"placeholder='name@example.com'style='height:30px;width:350px;border:2px solid lightgray;'><br>
-            <label>Password</label><br>
-            <input type="text"placeholder='Password'style='height:30px;width:350px;border:2px solid lightgray;'><br>
-            <p style="font-size:0.8em;">Already has an account ? <a href="login.html"style='color:cyan;text-decoration:underline'> Login</a></p>
-            <input type="button"value='Register'style='margin-left:150px'>
-        </form>
-    </div>
-</div>
 
+    <!-- Header Section -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
+        <div class="container">
+            <!-- Brand Logo -->
+            <a class="navbar-brand" href="#">
+                <h2 class="mb-0">Ecommerce</h2>
+            </a>
+            <!-- Toggler Button for Mobile -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- Navbar Links and Buttons -->
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <!-- Centered Links -->
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item"><a class="nav-link text-dark" href="home-page.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="Product-page.html">Products</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="About.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="Contact-page.html">Contact</a></li>
+                </ul>
+                <!-- Right-aligned Buttons -->
+                <div class="d-flex gap-3">
+                    <a href="login.html" class="btn btn-outline-dark btn-sm">
+                        <i class="fa-solid fa-right-to-bracket me-2"></i> Login
+                    </a>
+                    <a href="Register.html" class="btn btn-outline-dark btn-sm">
+                        <i class="fas fa-user-plus me-2"></i> Register
+                    </a>
+                    <a href="cart.html" class="btn btn-outline-dark btn-sm">
+                        <i class="fa-solid fa-cart-shopping me-2"></i> Cart (<span id="cart-value">0</span>)
+                    </a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Main Content -->
+    <div class="container">
+        <h1 class="text-center mb-4">Register</h1>
+        <hr>
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-8 col-lg-6">
+                <form class="p-4 rounded bg-white shadow-sm">
+                    <div class="mb-3">
+                        <label for="fullName" class="form-label">Full Name</label>
+                        <input type="text" class="form-control" id="fullName" placeholder="Enter Your Name">
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email Address</label>
+                        <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                    </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="Password">
+                    </div>
+                    <p class="small">
+                        Already have an account? <a href="login.html" class="text-decoration-underline text-aqua">Login</a>
+                    </p>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-dark w-100">Register</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer Section -->
+    <footer class="py-4 text-center mt-5">
+        <p class="mb-0">Made with <span style="color:red;">&#x2665;</span> By <u>Tarun Mudhiraj</u></p>
+    </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
