--- a/home-page.html
+++ b/home-page.html
@@ -4,89 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home-page</title>
-    <script src="https://kit.fontawesome.com/1e086755ed.js"crossorigin="anonymous"></script>
-    <link href="Ecommerce.css"rel='stylesheet'>
+    <script src="https://kit.fontawesome.com/1e086755ed.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="cart.js"></script>
-    <style>
-        .banner-img{
-            height:600px;
-            width:1500px;
-            color:white;
-            margin:0px 8px;
-            background-image:url('./main-banner.jpg');
-            align-content: center;
-        }
-        .latest-products-btn{
-            background-color:white;
-            border-radius:5px;
-            padding:5px 10px;
-            margin-right:10px;
-        }
-        .latest-products-btn:hover{
-            background-color:black;
-            color:white;
-        }
-        #card-items{
-            display:grid;
-            grid-template-columns:auto auto auto;
-            margin:50px 20px 0px 20px;
-        }
-        #cardDiv{
-            border:1px solid lightgray;
-            border-radius:8px;
-            height:500px;
-            width:400px;
-            margin-bottom:50px;
-            padding-top:10px;
-        }
-        /* #card-items:nth-child(19){
-           margin-left:300px;   
-        } */
-    </style>
 </head>
 <body>
-<header>
-    <div>
-        <h2>Ecommerce</h2>
+    <!-- Responsive Header -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
+        <div class="container">
+            <!-- Brand Logo -->
+            <a class="navbar-brand" href="#">
+                <h2 class="mb-0">Ecommerce</h2>
+            </a>
+            <!-- Toggler Button for Mobile -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- Navbar Links and Buttons -->
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <!-- Centered Links -->
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item"><a class="nav-link text-dark" href="home-page.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="Product-page.html">Products</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="About.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="Contact-page.html">Contact</a></li>
+                </ul>
+                <!-- Right-aligned Buttons -->
+                <div class="d-flex gap-3">
+                    <a href="login.html" class="btn btn-outline-dark btn-sm">
+                        <i class="fa-solid fa-right-to-bracket me-2"></i> Login
+                    </a>
+                    <a href="Register.html" class="btn btn-outline-dark btn-sm">
+                        <i class="fas fa-user-plus me-2"></i> Register
+                    </a>
+                    <a href="cart.html" class="btn btn-outline-dark btn-sm">
+                        <i class="fa-solid fa-cart-shopping me-2"></i> Cart (<span id="cart-value">0</span>)
+                    </a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Banner Section -->
+    <div class="banner-img text-white d-flex align-items-center justify-content-start bg-dark" style="background-image:url('main-banner.jpg'); height:600px; background-size:cover;">
+        <div class="container">
+            <p class="display-4">New Season Arrivals</p>
+            <p class="fs-5">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+        </div>
     </div>
-    <div class='nav-links'>
-        <a href="home-page.html">Home</a>
-        <a href="Product-page.html">Products</a>
-        <a href="About.html">About</a>
-        <a href="Contact-page.html">Contact</a>
+
+    <!-- Latest Products Section -->
+    <div class="container text-center my-5">
+        <h1>Latest Products</h1>
+        <hr>
+        <div class="d-flex justify-content-center gap-3 my-3 flex-wrap">
+            <button onclick="filter('all')" class="btn btn-outline-dark">All</button>
+            <button onclick="filter('men\'s clothing')" class="btn btn-outline-dark">Men's Clothing</button>
+            <button onclick="filter('women\'s clothing')" class="btn btn-outline-dark">Women's Clothing</button>
+            <button onclick="filter('jewelery')" class="btn btn-outline-dark">Jewellery</button>
+            <button onclick="filter('electronics')" class="btn btn-outline-dark">Electronics</button>
+        </div>
+        <div id="card-items" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4"></div>
     </div>
-    <div class="btn-icon-header">
-        <span class="icon-header">
-            <i class="fa-solid fa-right-to-bracket"></i>
-            <a href='login.html' class="btn-header">Login</a>
-        </span>
-        <span class="icon-header">
-            <i class="fas fa-user-plus"></i>
-            <a href='Register.html' class="btn-header">Register</a>
-        </span>            
-        <span class="icon-header">
-            <i class="fa-solid fa-cart-shopping"></i>
-            <a href="cart.html"><button class="btn-header">Cart (<span id="cart-value">0</span>)</button></a> 
-        </span>           
-    </div> 
-</header>
-<div class="banner-img">
-    <div style="margin-left:40px;">
-        <p style="font-size:2.5em;">New Season Arrivals</p>
-        <p style="font-size:1.2em;margin-top:-25px;">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-    </div>
-</div>
-<h1 align='center'>Latest Products</h1>
-<hr><br>
-<div align='center'>
-    <button onclick="filter('all')"class="latest-products-btn">All</button>
-    <button onclick="filter('men\'s clothing')"class="latest-products-btn">Men's Clothing</button>
-    <button onclick="filter('women\'s clothing')"class="latest-products-btn">Women's Clothing</button>
-    <button onclick="filter('jewelery')"class="latest-products-btn">Jewellery</button>
-    <button onclick="filter('electronics')"class="latest-products-btn">Electronics</button>
-</div>
-<div id="card-items"></div>
-<br>
-<p align="center"style='font-size:1.3em'>Made with <span style='color:red;'>&#x2665</span> By <u>Tarun Mudhiraj</u></p>
+
+    <!-- Footer -->
+    <footer class="text-center py-3">
+        <p class="mb-0" style="font-size: 1.3em;">Made with <span style="color:red;">&#x2665;</span> By <u>Tarun Mudhiraj</u></p>
+    </footer>
 </body>
 </html>
