--- a/cart.html
+++ b/cart.html
@@ -8,49 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="cart.js"></script>
-    <!-- <link href="Ecommerce.css"rel='stylesheet'> -->
-<!-- <style>
-body{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    overflow-x:hidden;
-}
-.cart-main{
-    display:grid;
-    grid-template-columns:auto auto;
-    margin:70px 70px 70px 60px;
-}
-#cart-flex{
-    display:grid;
-    grid-template-columns:auto auto auto;
-    justify-items: center;
-    height:150px;
-}
-#cart-items{
-    border:1px solid black;
-    overflow-y:scroll;
-    margin-left:50px;
-    height:600px;
-    width:100%;
-}
-#checkout{
-    border:1px solid black;
-    transform:translateX(100px);
-    padding:10px 40px;
-    height:250px;
-    width:350px;
-}
-#checkout button{
-    background-color: black;
-    color: white;
-    padding:8px 10px;
-    width:350px
-}
-#card-items{
-    display:grid;
-    grid-template-columns:auto auto auto;
-    margin:50px 20px 0px 20px;
-}
-    </style> -->
 </head>
 <body>
 <div>
@@ -100,10 +57,8 @@ body{
     </div>
     <div class="container my-5">
         <div class="row">
-            <div class="col-md-8" id="cart-items">
-            </div>
-            <div class="col-md-4" id="checkout">
-            </div>
+            <div class="border rounded col-md-8" id="cart-items"></div>
+            <div class="col-md-4" id="checkout"></div>
         </div>
     </div>
 </div>
