--- a/About.html
+++ b/About.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/1e086755ed.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
+    <nav class="sticky-top navbar navbar-expand-lg navbar-light bg-light py-3">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <h2 class="mb-0">Ecommerce</h2>
