--- a/Product-page.html
+++ b/Product-page.html
@@ -10,7 +10,7 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
+    <nav class="sticky-top navbar navbar-expand-lg navbar-light bg-light py-3">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <h2 class="mb-0">Ecommerce</h2>
