--- a/cart.html
+++ b/cart.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
+    <nav class="sticky-top navbar navbar-expand-lg navbar-light bg-light py-3">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <h2 class="mb-0">Ecommerce</h2>
