--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </div>
     </nav>
-    <div class="banner-img text-white d-flex align-items-center justify-content-start bg-dark" style="background-image:url('../images/main-banner.jpg'); height:600px; background-size:cover;">
+    <div class="banner-img text-white d-flex align-items-center justify-content-start bg-dark" style="background-image:url('../images/main-banner.jpg'); height:600px; background-size:cover;border-radius:5px;">
         <div class="container">
             <p class="display-4">New Season Arrivals</p>
             <p class="fs-5">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
