--- a/Contact-page.html
+++ b/Contact-page.html
@@ -19,10 +19,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link text-dark" href=".html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-dark" href="Product-page.html">Products</a></li>
-                    <li class="nav-item"><a class="nav-link text-dark" href="About.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link text-dark" href="Contact-page.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="Product-page.html">Products</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="About.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="Contact-page.html">Contact</a></li>
                 </ul>
                 <div class="d-flex gap-3">
                     <a href="login.html" class="btn btn-outline-dark btn-sm">
