--- a/cart.html
+++ b/cart.html
@@ -8,8 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
+    <link href="styles.css"rel="stylesheet">
 </head>
-<body>
+<body class="bg-white">
 <div>
     <nav class="sticky-top navbar navbar-expand-lg navbar-light bg-light py-3">
         <div class="container">
@@ -21,10 +22,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link text-lightgray active" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-lightgray" href="Product-page.html">Products</a></li>
-                    <li class="nav-item"><a class="nav-link text-lightgray" href="About.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link text-lightgray" href="Contact-page.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="Product-page.html">Products</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="About.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="Contact-page.html">Contact</a></li>
                 </ul>
                 <div class="d-flex gap-3">
                     <a href="login.html" class="btn btn-outline-dark btn-sm">
@@ -43,7 +44,7 @@
     <div id="cart" class="container">
         <h1 class="text-center mt-5">Cart</h1>
         <hr class="w-100 mx-auto">
-        <div class="d-flex flex-column justify-content-center align-items-center p-4 bg-light rounded" style="height: 350px;">
+        <div class="d-flex flex-column justify-content-center align-items-center p-4 bg-dark-gray rounded" style="height: 350px;">
             <p class="fs-1 mb-4 text-center">Your Cart is Empty</p>
             <a href="index.html" class="text-decoration-none">
                 <button id="cart-continue-btn" class="btn btn-outline-dark px-4 py-2">
