--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
+    <link href="styles.css"rel="stylesheet">
 </head>
 <body>
     <nav class="sticky-top navbar navbar-expand-lg navbar-light bg-light py-3">
@@ -20,10 +21,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link text-dark" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-dark" href="Product-page.html">Products</a></li>
-                    <li class="nav-item"><a class="nav-link text-dark" href="About.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link text-dark" href="Contact-page.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="index.html"id="home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="Product-page.html"id="products">Products</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="About.html"id="about">About</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="Contact-page.html"id="contact">Contact</a></li>
                 </ul>
                 <div class="d-flex gap-3">
                     <a href="login.html" class="btn btn-outline-dark btn-sm">
@@ -39,7 +40,7 @@
             </div>
         </div>
     </nav>
-    <div class="banner-img text-white d-flex align-items-center justify-content-start bg-dark" style="background-image:url('../images/main-banner.jpg'); height:600px; background-size:cover;border-radius:5px;">
+    <div class="banner-img text-white d-flex align-items-center justify-content-start bg-dark mx-3" style="background-image:url('./images/main-banner.jpg'); height:600px; background-size:cover;border-radius:5px;">
         <div class="container">
             <p class="display-4">New Season Arrivals</p>
             <p class="fs-5">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
