--- a/html/index.html
+++ b/html/index.html
@@ -27,14 +27,14 @@
                     <li class="nav-item"><a class="nav-link text-secondary" href="./Contact-page.html"id="contact">Contact</a></li>
                 </ul>
                 <div class="d-flex gap-3">
-                    <a href="./login.html" class="btn btn-outline-dark btn-sm">
-                        <i class="fa-solid fa-right-to-bracket me-2"></i> Login
+                    <a href="./login.html" class="btn btn-outline-dark btn-md">
+                        <i class="fa-solid fa-right-to-bracket me-2"></i>Login
                     </a>
-                    <a href="./Register.html" class="btn btn-outline-dark btn-sm">
-                        <i class="fas fa-user-plus me-2"></i> Register
+                    <a href="./Register.html" class="btn btn-outline-dark btn-md">
+                        <i class="fas fa-user-plus me-2"></i>Register
                     </a>
-                    <a href="./cart.html" class="btn btn-outline-dark btn-sm">
-                        <i class="fa-solid fa-cart-shopping me-2"></i> Cart (<span id="cart-value">0</span>)
+                    <a href="./cart.html" class="btn btn-outline-dark btn-md">
+                        <i class="fa-solid fa-cart-shopping me-2"></i>Cart(<span id="cart-value">0</span>)
                     </a>
                 </div>
             </div>
