--- a/html/About.html
+++ b/html/About.html
@@ -6,6 +6,7 @@
     <title>About-page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/styles.css"rel="stylesheet">
+    <script src="../js/script.js"></script>
     <script src="https://kit.fontawesome.com/1e086755ed.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -81,7 +82,7 @@
             </div>
             <div class="col-6 col-md-3">
                 <div class="card border">
-                    <img src="https://fakestoreapi.com/img/81Zt42ioCgL._AC_SX679_.jpg" 
+                    <img src="https://fakestoreapi.com/img/81Zt42ioCgL._AC_SX679_.jpg"
                          class="card-img-top img-fluid" 
                          alt="Electronics">
                     <div class="card-body">
