--- a/html/Contact-page.html
+++ b/html/Contact-page.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/1e086755ed.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/styles.css"rel="stylesheet">
+    <script src="../js/script.js"></script>
 </head>
 <body>
     <nav class="sticky-top navbar navbar-expand-lg navbar-light bg-light py-3">
