--- a/html/login.html
+++ b/html/login.html
@@ -6,6 +6,7 @@
     <title>Login Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1e086755ed.js" crossorigin="anonymous"></script>
+    <script src="../js/script.js"></script>
     <link href="../css/styles.css"rel="stylesheet">
 </head>
 <body>
