--- a/html/login.html
+++ b/html/login.html
@@ -10,36 +10,30 @@
     <link href="../css/styles.css"rel="stylesheet">
 </head>
 <body>
-    <nav class="sticky-top navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="sticky-top navbar navbar-expand-lg navbar-light bg-light py-3">
         <div class="container">
-            <a class="navbar-brand" href="#"><h2 class="mb-0">Ecommerce</h2></a>
+            <a class="navbar-brand" href="#">
+                <h2 class="mb-0">Ecommerce</h2>
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item">
-                        <a class="nav-link text-secondary" href="./index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-secondary" href="./Product-page.html">Products</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-secondary" href="./About.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-secondary" href="./Contact-page.html">Contact</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="./index.html" id="home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="./Product-page.html" id="products">Products</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="./About.html" id="about">About</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="./Contact-page.html" id="contact">Contact</a></li>
                 </ul>
-                <div class="d-flex gap-2">
-                    <a href="./login.html" class="btn btn-outline-dark btn-sm">
-                        <i class="fa-solid fa-right-to-bracket me-2"></i> Login
+                <div class="d-flex gap-3">
+                    <a href="./login.html" class="btn btn-outline-dark btn-md">
+                        <i class="fa-solid fa-right-to-bracket me-2"></i>Login
                     </a>
-                    <a href="./Register.html" class="btn btn-outline-dark btn-sm">
-                        <i class="fas fa-user-plus me-2"></i> Register
+                    <a href="./Register.html" class="btn btn-outline-dark btn-md">
+                        <i class="fas fa-user-plus me-2"></i>Register
                     </a>
-                    <a href="./cart.html" class="btn btn-outline-dark btn-sm">
-                        <i class="fa-solid fa-cart-shopping me-2"></i> Cart (<span id="cart-value">0</span>)
+                    <a href="./cart.html" class="btn btn-outline-dark btn-md">
+                        <i class="fa-solid fa-cart-shopping me-2"></i>Cart(<span id="cart-value">0</span>)
                     </a>
                 </div>
             </div>
