--- a/html/About.html
+++ b/html/About.html
@@ -39,20 +39,20 @@
             </div>
         </div>
     </nav>
-    <div class="container my-5">
+    <div class="container my-2">
         <h1 class="text-center">About Us</h1>
         <hr>
-        <p class="text-center fs-5 px-3">
+        <p class="fs-5 px-3">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa accusamus, iusto, mollitia voluptatum voluptate soluta nulla ex tempora laboriosam officiis modi sapiente quo ipsam velit! Asperiores sapiente similique ipsum eius?
             Expedita id, in consectetur dolore ullam cupiditate perspiciatis sequi sunt dignissimos delectus fugiat illum libero! Fuga omnis numquam neque, tempora quae animi error rem exercitationem laborum mollitia explicabo fugit itaque!
         </p>
     </div>
-    <div class="container my-5">
-        <h1 class="text-center">Our Products</h1>
+    <div class="container my-3">
+        <h1 class="text-center pb-2">Our Products</h1>
         <div class="row g-4 text-center">
             <div class="col-6 col-md-3">
                 <div class="card border">
-                    <img src="https://fakestoreapi.com/img/71-3HjGNDUL._AC_SY879._SX._UX._SY._UY_.jpg" 
+                    <img src="../images/mens.jpeg" 
                          class="card-img-top img-fluid" 
                          alt="Mens Clothing">
                     <div class="card-body">
@@ -62,7 +62,7 @@
             </div>
             <div class="col-6 col-md-3">
                 <div class="card border">
-                    <img src="https://fakestoreapi.com/img/81XH0e8fefL._AC_UY879_.jpg" 
+                    <img src="../images/womens.jpeg" 
                          class="card-img-top img-fluid" 
                          alt="Womens Clothing">
                     <div class="card-body">
@@ -72,7 +72,7 @@
             </div>
             <div class="col-6 col-md-3">
                 <div class="card border">
-                    <img src="https://fakestoreapi.com/img/71YAIFU48IL._AC_UL640_QL65_ML3_.jpg" 
+                    <img src="../images/jewellery.jpeg" 
                          class="card-img-top img-fluid" 
                          alt="Jewelry">
                     <div class="card-body">
@@ -82,7 +82,7 @@
             </div>
             <div class="col-6 col-md-3">
                 <div class="card border">
-                    <img src="https://fakestoreapi.com/img/81Zt42ioCgL._AC_SX679_.jpg"
+                    <img src="../images/electronics.jpeg"
                          class="card-img-top img-fluid" 
                          alt="Electronics">
                     <div class="card-body">
