--- a/html/login.html
+++ b/html/login.html
@@ -54,10 +54,10 @@
                         <input type="password" class="form-control" id="password" placeholder="Password">
                     </div>
                     <p class="text-muted small">
-                        New here? <a href="Register.html" class="text-decoration-underline text-aqua">Register</a>
+                        New here? <a href="./Register.html" class="text-decoration-underline text-aqua">Register</a>
                     </p>
                     <div class="text-center">
-                        <button type="submit" class="btn btn-dark w-100">Login</button>
+                        <button type="submit" class="btn btn-dark w-25">Login</button>
                     </div>
                 </form>
             </div>
