--- a/html/Register.html
+++ b/html/Register.html
@@ -58,10 +58,10 @@
                         <input type="password" class="form-control" id="password" placeholder="Password">
                     </div>
                     <p class="small">
-                        Already have an account? <a href="login.html" class="text-decoration-underline text-aqua">Login</a>
+                        Already have an account? <a href="./login.html" class="text-decoration-underline text-aqua">Login</a>
                     </p>
                     <div class="text-center">
-                        <button type="submit" class="btn btn-dark w-100">Register</button>
+                        <button type="submit" class="btn btn-dark w-30">Register</button>
                     </div>
                 </form>
             </div>
