--- a/html/cart.html
+++ b/html/cart.html
@@ -22,33 +22,33 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link text-secondary" href="./index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-secondary" href="./Product-page.html">Products</a></li>
-                    <li class="nav-item"><a class="nav-link text-secondary" href="./About.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link text-secondary" href="./Contact-page.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="./index.html" id="home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="./Product-page.html" id="products">Products</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="./About.html" id="about">About</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="./Contact-page.html" id="contact">Contact</a></li>
                 </ul>
                 <div class="d-flex gap-3">
-                    <a href="./login.html" class="btn btn-outline-dark btn-sm">
-                        <i class="fa-solid fa-right-to-bracket me-2"></i> Login
+                    <a href="./login.html" class="btn btn-outline-dark btn-md">
+                        <i class="fa-solid fa-right-to-bracket me-2"></i>Login
                     </a>
-                    <a href="./Register.html" class="btn btn-outline-dark btn-sm">
-                        <i class="fas fa-user-plus me-2"></i> Register
+                    <a href="./Register.html" class="btn btn-outline-dark btn-md">
+                        <i class="fas fa-user-plus me-2"></i>Register
                     </a>
-                    <a href="./cart.html" class="btn btn-outline-dark btn-sm">
-                        <i class="fa-solid fa-cart-shopping me-2"></i> Cart (<span id="cart-value">0</span>)
+                    <a href="./cart.html" class="btn btn-outline-dark btn-md">
+                        <i class="fa-solid fa-cart-shopping me-2"></i>Cart(<span id="cart-value">0</span>)
                     </a>
                 </div>
             </div>
         </div>
-    </nav> 
+    </nav>
     <div id="cart" class="container">
-        <h1 class="text-center mt-5">Cart</h1>
+        <h1 class="text-center mt-2">Cart</h1>
         <hr class="w-100 mx-auto">
-        <div class="d-flex flex-column justify-content-center align-items-center p-4 bg-dark-gray rounded" style="height: 350px;">
+        <div class="d-flex flex-column justify-content-center align-items-center p-4 bg-dark-gray border rounded" style="height: 350px;">
             <p class="fs-1 mb-4 text-center">Your Cart is Empty</p>
             <a href="./index.html" class="text-decoration-none">
                 <button id="cart-continue-btn" class="btn btn-outline-dark px-4 py-2">
-                    <i class="fa-solid fa-left-long me-2"></i> Continue Shopping
+                    <i class="fa-solid fa-left-long me-2"></i>Continue Shopping
                 </button>
             </a>
         </div>
@@ -56,7 +56,7 @@
             Made with <span style="color: red;">&#x2665;</span> By <u>Tarun Mudhiraj</u>
         </p>
     </div>
-    <div class="container my-5">
+    <div class="container my-5"id='cart-checkout'>
         <div class="row">
             <div class="border rounded col-md-8" id="cart-items"></div>
             <div class="col-md-4" id="checkout"></div>
